WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
255373
REGRESSION (
261193@main
): missing elements on apple-console.lrn.com
https://bugs.webkit.org/show_bug.cgi?id=255373
Summary
REGRESSION (261193@main): missing elements on apple-console.lrn.com
Tim Nguyen (:ntim)
Reported
2023-04-12 16:05:51 PDT
rdar://106779034
Attachments
Add attachment
proposed patch, testcase, etc.
Tim Nguyen (:ntim)
Comment 1
2023-04-12 16:08:43 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/12676
EWS
Comment 2
2023-04-13 11:21:18 PDT
Committed
262921@main
(162629a2bccd): <
https://commits.webkit.org/262921@main
> Reviewed commits have been landed. Closing PR #12676 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug