REGRESSION (261193@main): missing elements on apple-console.lrn.com https://bugs.webkit.org/show_bug.cgi?id=255373 rdar://106779034

Reviewed by Brent Fulgham.

The site uses a popover attribute without the intention of using the popover API, causing the display: none; UA styles to apply.
Quirk the site to have the attribute disabled.

* Source/WebCore/html/HTMLElement.cpp:
(WebCore::HTMLElement::parseAttribute):
* Source/WebCore/html/HTMLElement.idl:
* Source/WebCore/html/PopoverInvokerElement.idl:
* Source/WebCore/page/Quirks.cpp:
(WebCore::Quirks::shouldDisablePopoverAttributeQuirk const):
* Source/WebCore/page/Quirks.h:
* Source/WebCore/style/UserAgentStyle.cpp:
(WebCore::Style::UserAgentStyle::ensureDefaultStyleSheetsForElement):

Canonical link: https://commits.webkit.org/262921@main