Source/WebCore/page/Quirks.cpp
@@ -1575,4 +1575,14 @@ bool Quirks::shouldAdvertiseSupportForHLSSubtitleTypes() const
 }
 #endif
 
+// apple-console.lrn.com (rdar://106779034)
+bool Quirks::shouldDisablePopoverAttributeQuirk() const
+{
+    if (!needsQuirks())
+        return false;
+
+    auto host = m_document->topDocument().url().host();
+    return equalLettersIgnoringASCIICase(host, "apple-console.lrn.com"_s);
+}
+
 }
